// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Radio Controlled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 jgHxgc Radio-sc-82dpxx-2 fSARal"
    >
      <label
        class="ClickInputLabel-j2axnv-0 hdKIjC"
      >
        <input
          aria-checked="true"
          aria-invalid="false"
          aria-required="false"
          checked=""
          class="Radio__RadioInput-sc-82dpxx-1 eKuWUu Radio-sc-82dpxx-2 fSARal"
          id="radio-1"
          type="radio"
        />
        <div
          checked=""
          class="Radio__VisualRadio-sc-82dpxx-0 liXUJA"
        />
        <span
          class="Text-sc-1wu7vpu-0 jRzHjr"
          color="currentColor"
          font-size="16px"
        >
           I am controlled and checked 
        </span>
      </label>
    </div>
    <div
      class="Box-sc-1qu1edy-0 jgHxgc Radio-sc-82dpxx-2 fSARal"
    >
      <label
        class="ClickInputLabel-j2axnv-0 hdKIjC"
      >
        <input
          aria-checked="false"
          aria-invalid="false"
          aria-required="false"
          class="Radio__RadioInput-sc-82dpxx-1 eKuWUu Radio-sc-82dpxx-2 fSARal"
          id="radio-2"
          type="radio"
        />
        <div
          class="Radio__VisualRadio-sc-82dpxx-0 liXUJA"
        />
        <span
          class="Text-sc-1wu7vpu-0 jRzHjr"
          color="currentColor"
          font-size="16px"
        >
           I am controlled and unchecked 
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio Radio 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 jgHxgc Radio-sc-82dpxx-2 fSARal"
    >
      <label
        class="ClickInputLabel-j2axnv-0 hdKIjC"
      >
        <input
          aria-invalid="false"
          aria-required="false"
          class="Radio__RadioInput-sc-82dpxx-1 eKuWUu Radio-sc-82dpxx-2 fSARal"
          id="radio"
          type="radio"
        />
        <div
          class="Radio__VisualRadio-sc-82dpxx-0 liXUJA"
        />
        <span
          class="Text-sc-1wu7vpu-0 jRzHjr"
          color="currentColor"
          font-size="16px"
        >
           I am a radio button 
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio Set to defaultChecked 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 jgHxgc Radio-sc-82dpxx-2 fSARal"
    >
      <label
        class="ClickInputLabel-j2axnv-0 hdKIjC"
      >
        <input
          aria-invalid="false"
          aria-required="false"
          checked=""
          class="Radio__RadioInput-sc-82dpxx-1 eKuWUu Radio-sc-82dpxx-2 fSARal"
          id="radio"
          type="radio"
        />
        <div
          class="Radio__VisualRadio-sc-82dpxx-0 liXUJA"
        />
        <span
          class="Text-sc-1wu7vpu-0 jRzHjr"
          color="currentColor"
          font-size="16px"
        >
           I am checked by default 
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio Set to disabled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 jgHxgc Radio-sc-82dpxx-2 fSARal"
    >
      <label
        class="ClickInputLabel-j2axnv-0 jxKJCC"
        disabled=""
      >
        <input
          aria-invalid="false"
          aria-required="false"
          class="Radio__RadioInput-sc-82dpxx-1 bzuiei Radio-sc-82dpxx-2 fSARal"
          disabled=""
          id="radio-1"
          type="radio"
        />
        <div
          class="Radio__VisualRadio-sc-82dpxx-0 dWBwrU"
          disabled=""
        />
        <span
          class="Text-sc-1wu7vpu-0 boKLRH"
          color="currentColor"
          disabled=""
          font-size="16px"
        >
           I am disabled 
        </span>
      </label>
    </div>
    <div
      class="Box-sc-1qu1edy-0 jgHxgc Radio-sc-82dpxx-2 fSARal"
    >
      <label
        class="ClickInputLabel-j2axnv-0 jxKJCC"
        disabled=""
      >
        <input
          aria-checked="true"
          aria-invalid="false"
          aria-required="false"
          checked=""
          class="Radio__RadioInput-sc-82dpxx-1 bzuiei Radio-sc-82dpxx-2 fSARal"
          disabled=""
          id="radio-2"
          type="radio"
        />
        <div
          checked=""
          class="Radio__VisualRadio-sc-82dpxx-0 dWBwrU"
          disabled=""
        />
        <span
          class="Text-sc-1wu7vpu-0 boKLRH"
          color="currentColor"
          disabled=""
          font-size="16px"
        >
           I am disabled 
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio Set to error 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 jgHxgc Radio-sc-82dpxx-2 fSARal"
    >
      <label
        class="ClickInputLabel-j2axnv-0 hdKIjC"
      >
        <input
          aria-invalid="true"
          aria-required="false"
          class="Radio__RadioInput-sc-82dpxx-1 ciJsGK Radio-sc-82dpxx-2 fSARal"
          id="radio"
          type="radio"
        />
        <div
          class="Radio__VisualRadio-sc-82dpxx-0 liXUJA"
        />
        <span
          class="Text-sc-1wu7vpu-0 jRzHjr"
          color="currentColor"
          font-size="16px"
        >
           I am error 
        </span>
      </label>
    </div>
    <div
      class="Box-sc-1qu1edy-0 jgHxgc Radio-sc-82dpxx-2 fSARal"
    >
      <label
        class="ClickInputLabel-j2axnv-0 hdKIjC"
      >
        <input
          aria-invalid="true"
          aria-required="false"
          checked=""
          class="Radio__RadioInput-sc-82dpxx-1 ciJsGK Radio-sc-82dpxx-2 fSARal"
          id="radio"
          type="radio"
        />
        <div
          class="Radio__VisualRadio-sc-82dpxx-0 liXUJA"
        />
        <span
          class="Text-sc-1wu7vpu-0 jRzHjr"
          color="currentColor"
          font-size="16px"
        >
           I am error 
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio Set to required 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 jgHxgc Radio-sc-82dpxx-2 fSARal"
    >
      <label
        class="ClickInputLabel-j2axnv-0 hdKIjC"
      >
        <input
          aria-invalid="false"
          aria-required="true"
          class="Radio__RadioInput-sc-82dpxx-1 eKuWUu Radio-sc-82dpxx-2 fSARal"
          id="radio"
          required=""
          type="radio"
        />
        <div
          class="Radio__VisualRadio-sc-82dpxx-0 liXUJA"
        />
        <span
          class="Text-sc-1wu7vpu-0 jRzHjr"
          color="currentColor"
          font-size="16px"
        >
           I am a radio button 
        </span>
      </label>
    </div>
  </div>
</div>
`;
